Adding passport strategies for Authentication (WIP)

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,14 @@
 JWT_SECRET='ExampleSecret'
 JWT_ISSUER='d8N'
+
 MONGO_HOST='127.0.0.1'
 MONGO_PORT='27017'
-MONGODB_DATABASE_NAME='d8N'
-SERVER_PORT=3000
+MONGO_DB_NAME='d8N'
+
+HTTP_SERVER_PORT=3000
+
+HTTPS_ENABLED=false
+HTTPS_SERVER_PORT=4430
+HTTPS_KEY_FILE_PATH=""
+HTTPS_CERT_FILE_PATH=""
+
