--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "jsonwebtoken": "^8.2.0",
     "mongoose": "^5.0.9",
     "morgan": "^1.9.0",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "serve-favicon": "^2.4.5"
   },
   "devDependencies": {
