--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
     "dotenv": "^5.0.1",
     "express": "^4.16.2",
-    "express-promise-router": "^3.0.1",
     "joi": "^13.1.2",
     "jsonwebtoken": "^8.2.0",
     "mongoose": "^5.0.9",
